--- a/styles.scss
+++ b/styles.scss
@@ -2,4 +2,4 @@
 @import './Partials/mixins';
 @import './Partials/general';
 @import './Partials/nav';
-// @import './Partials/nav';
+@import './Partials/nav';
