--- a/Partials/_variables.scss
+++ b/Partials/_variables.scss
@@ -28,4 +28,4 @@ $card-border-radius: 1rem;
 $btn-padding: 0.6rem 2rem;
 $search-padding: 0.6rem 1rem;
 $card-padding: 1rem;
-// $normal-padding: 3rem;
+$normal-padding: 3rem;
