--- a/Partials/_nav.scss
+++ b/Partials/_nav.scss
@@ -1,21 +1,46 @@
+nav {
+    width: 100%;
+    background: $white-color;
+    padding: 0.7rem 0;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
+        .search-bar {
+            background: $light-color;
+            border-radius: $border-radius;
+            padding: $search-padding;
 
+           & > input[type='search'] {
+            background: transparent;
+            width: 30vw;
+            margin-left: 1rem;
+            color: $dark-color;
+            font-size: 0.9rem;
 
+            &::placeholder {
+                color: $gray-color;
+            }
+           }
+        }
+    }
 
-
-
-
-
-
-
-
+    .create {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+}
 
 .profile_picture {
     width: 2.7rem;
     aspect-ratio: 1/1;
     border-radius: 50%;
     overflow: hidden;
-    // height: none;
-}
 
+}
