--- a/Partials/_variables.scss
+++ b/Partials/_variables.scss
@@ -1,16 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
 $dark-color: hsl(252, 30%, 100%);
 $light-color: hsl(252, 30%, 95%);
 $gray-color: hsl(252, 15%, 65%);
@@ -20,6 +7,7 @@ $success-color: hsl(120, 95%, 65%);
 $danger-color: hsl(0, 95%, 65%);
 $dark-color: hsl(252, 30%, 17%);
 $black-color: hsl(252, 30%, 10%);
+$white-color: #fff;
 $container-lg: 80%;
 $container-md: 90%;
 
@@ -28,4 +16,3 @@ $card-border-radius: 1rem;
 $btn-padding: 0.6rem 2rem;
 $search-padding: 0.6rem 1rem;
 $card-padding: 1rem;
-$normal-padding: 3rem;
