New Variables Declared

--- a/Partials/_variables.scss
+++ b/Partials/_variables.scss
@@ -9,10 +9,13 @@ $dark-color: hsl(252, 30%, 17%);
 $black-color: hsl(252, 30%, 10%);
 $white-color: #fff;
 $container-lg: 80%;
-$container-md: 90%;
+$container-md: 96%;
 
 $border-radius: 2rem;
 $card-border-radius: 1rem;
 $btn-padding: 0.6rem 2rem;
 $search-padding: 0.6rem 1rem;
 $card-padding: 1rem;
+
+$sticky-top-left: 5.4rem;
+$sticky-top-right: -18rem;  
