--- a/Partials/_main.scss
+++ b/Partials/_main.scss
@@ -117,7 +117,7 @@ main {
                     color: $gray-color;
                     margin-left: 2rem;
 
-                    .notification_count {
+                    .notification_count, .messages_notification_count {
                         background: $danger-color;
                         color: $white-color;
                         padding: 0.2rem 0.4rem;
@@ -473,6 +473,7 @@ main {
     main {
         .container {
             grid-template-columns: 0 auto 5rem;
+            gap: 0;
 
             .left {
                 grid-column: 3/4;
@@ -480,6 +481,7 @@ main {
                 bottom: 0;
                 // top: 0;
                 right: 0;
+                width: 4.5rem;
 
                 .sidebar {
                     .menu_item {
