--- a/Partials/_general.scss
+++ b/Partials/_general.scss
@@ -49,7 +49,7 @@ img {
 }
 
 
-//////////////////MEDIA QUERY (MEDIUM DEVICES)////////////////////
+////////////////MEDIA QUERY (MEDIUM DEVICES)////////////////////
 
 
 
