NavBar Section Partial

--- a/Partials/_nav.scss
+++ b/Partials/_nav.scss
@@ -44,7 +44,7 @@ nav {
     overflow: hidden;
 }
 
-/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)//////////////////
+/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)////////////////
 
 @media screen and (max-width: 900px) {
     nav {
