Main Section Tweak

--- a/Partials/_main.scss
+++ b/Partials/_main.scss
@@ -75,7 +75,7 @@ main {
                         overflow: hidden;
                     }
 
-                    /////////// NOTIFICATION POPUP //////////////
+                    /////////// NOTIFICATION POPUP /////////////
                     .notification_popup {
                         position: absolute;
                         top: 0;
