General Section Partial

--- a/Partials/_general.scss
+++ b/Partials/_general.scss
@@ -18,7 +18,7 @@ html {
 
 body {
     font-family: "Poppins", sans-serif;
-    // color: $dark-color;
+    color: $dark-color;
     background: $light-color;
     overflow-x: hidden;
 }
