--- a/Partials/_theme.scss
+++ b/Partials/_theme.scss
@@ -94,7 +94,7 @@
             }
         }
 
-        ///////////////// END OF COLOR///////////////////
+        ///////////////// END OF COLOR//////////////////
 
         .background {
             margin-top: 2rem;
