--- a/Partials/_general.scss
+++ b/Partials/_general.scss
@@ -59,7 +59,7 @@ img {
     }
 }
 
-/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)//////////////////
+/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)/////////////////
 
 // @media screen and (max-width: 600px) {
 // }
