--- a/Partials/_main.scss
+++ b/Partials/_main.scss
@@ -467,7 +467,7 @@ main {
     }
 }
 
-/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)////////////////////
+/////////////////////MEDIA QUERY (SMALL TABS AND MOBILE DEVICES)///////////////////
 
 @media screen and (max-width: 900px) {
     main {
